# sesame_ul_uavs

./: .CMakeLists.txt.swp  CMakeLists.txt  README.md  package.xml
cfg/: grid_pattern_aerolab.yaml  observer_position.yaml  rectangle_pattern_y_z.yaml
include/sesame_ul_uavs/: gazebo_ros_p3d_v2.h
launch/: aerolab.launch  aerolab_one_drone.launch  aerolab_three_drones.launch  aerolab_two_drones.launch  aerolab_two_drones_v3.launch
launch/includes/: spawn_drone.launch  start_grvc_world.launch
launch/missions_includes/: simple_mission.launch
models/spacer5g/: .geometry.xacro.swp  .model.xacro.swp  geometry.xacro  model.xacro  px4cmd
src/: gazebo_ros_p3d_v2.cpp  simple_mission.py
urdf/: ._d435.gazebo.xacro.swp  ._d435.urdf.xacro.swp  _d435.gazebo.xacro  _d435.urdf.xacro  _d435_v2.gazebo.xacro
worlds/: aerolab.world
